docs(proposals): pass 62 — complete Why-existing-events gap and vague language sweep
All "Why existing events don't cover this" bullets are now above 170 chars.
All "No existing JFR event" terminator bullets now name the specific missing
fields and explain the diagnostic consequence of their absence.
Vague conditionals replaced with deterministic causal statements throughout:

- NativeHeapTrim: named specific absent fields (deltaBytes, trimDuration,
  trimCount); explained trim-operation vs. snapshot distinction
- GCOverheadLimitExceeded: named the three specific missing fields
  (_gc_overhead_counter, long_term_gc_time_ratio, free_space_percent)
- ShenandoahMMU: expanded PromotionInformation, HeapRegionStateChange,
  and MMU summary bullets with missing field names
- ShenandoahCollectionDecision: PromotionInformation bullet now names
  every field the event lacks
- ShenandoahReclaimProgress: CollectionDecision bullet explains the
  thread/timing reason they cannot merge; "No existing event" bullet
  adds the advance-warning consequence of missing badProgressCount
- ShenandoahTenuringThreshold: named compute_tenuring_threshold() output
  fields and explained TenuringDistribution's input-not-output limitation
- ZNMethodRegistration: explained ZNMethodTable structure separation from
  code cache; named the two absent fields (_nregistered, _nunregistered)
- G1ConcurrentRefinementSweep: named the 4 absent fields in G1AdaptiveIHOP;
  added Update RS sub-phase decomposition note to GarbageCollection bullet
- G1CollectionSetCandidates: GarbageCollection bullet now lists all 5
  missing fields and explains the duration ambiguity
- G1HeapResize: GCHeapSummary bullet lists all 9 absent fields; GCConfiguration
  bullet references the scale_with_heap() effective target divergence
- ZDirectorRule: ZOldGarbageCollection expanded; GarbageCollection bullet
  adds cause-string disambiguation limitation; terminator bullet names
  heapFreePercent and timeUntilMinorOOM as the key idle-